<resources>
<string name="app_name">Tweets in Town</string>

<string name="hello_world">Hello world!</string>
<string name="action_settings">Settings</string>
<string name="btnLocation">Submit</string>
<string name="CON_SECRET">5Q3JOivjJewdSE1Bfqz5EWiIrJLdleQUQBVHS2sx9tHh6nM7hn</string>
<string name="CON_KEY">c6T1Pgy20vmcbzaYCKZ4ZAUkN</string>
<string name="error">Error</string>
<string name="title_activity_tweets">Tweets</string>
<string name="action_tweets">Tweets</string>
<string name="action_search">Search</string>
<string name="location_hint">Search for a new location</string>
<string name="btn_maps">Search</string>
<string name="btn_see_tweets">See the best tweets</string>
<string name="google_maps_key">AIzaSyD98dhTN7B9kIRpDki-e_qFy3AmrOfs_X4</string>
<string name="searching">searching</string>
</resources>
