<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:id="@+id/TFaddress"
    android:hint="@string/location_hint"
        android:layout_alignParentStart="true" />
    <Button
    style="?android:buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn_maps"
    android:id="@+id/search_btn"
    android:gravity="end"
        android:layout_alignTop="@+id/TFaddress"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:onClick="onSearch" />
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/map" tools:context=".MapsActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_below="@+id/TFaddress" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_see_tweets"
        android:id="@+id/seeTweetsBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>